<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/insurance_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/adminInsurance"
        android:textColor="@color/White"
        android:onClick="goToEmployee"
        app:layout_constraintBottom_toTopOf="@+id/medical_staff_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/packages_button"
        app:layout_constraintTop_toBottomOf="@+id/logo_imageView" />

    <Button
        android:id="@+id/medical_staff_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/adminMedicalStaff"
        android:textColor="@color/White"
        android:onClick="goToMedicalStaff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/meals_button"
        app:layout_constraintTop_toBottomOf="@+id/insurance_button" />

    <Button
        android:id="@+id/packages_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/adminPackages"
        android:textColor="@color/White"
        android:onClick="goToPackages"
        app:layout_constraintBottom_toTopOf="@+id/meals_button"
        app:layout_constraintEnd_toStartOf="@+id/insurance_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_imageView" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="162dp"
        android:background="@drawable/rounded_corners"
        android:onClick="logout"
        android:text="@string/logout"
        android:textColor="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transport_button" />

    <Button
        android:id="@+id/transport_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/adminTransport"
        android:textColor="@color/White"
        android:onClick="goToTransport"
        app:layout_constraintEnd_toStartOf="@+id/admin_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meals_button" />

    <Button
        android:id="@+id/meals_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/adminMeals"
        android:textColor="@color/White"
        android:onClick="goToMealPlan"
        app:layout_constraintEnd_toStartOf="@+id/medical_staff_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/packages_button" />

    <Button
        android:id="@+id/admin_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:text="@string/adminNewAdmin"
        android:background="@drawable/rounded_corners"
        android:textColor="@color/White"
        android:onClick="goToNewAdmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/transport_button"
        app:layout_constraintTop_toBottomOf="@+id/medical_staff_button" />

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="383dp"
        android:layout_height="236dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>